# NoctLang

./: CMakeLists.txt  CMakePresets.json  Makefile.am  README.md  configure.ac
.github/workflows/: compile.yml
cmake/: qemu-arm64-toolchain.cmake  qemu-ppc64-toolchain.cmake
docs/: api.md  ffi.md  syntax.md  vmspec.md
i18n/: make_translation.py  message.txt
include/noct/: aot.h  c89compat.h  noct.h
locale/de/LC_MESSAGES/: libnoct.mo
locale/el/LC_MESSAGES/: libnoct.mo
locale/en/LC_MESSAGES/: libnoct.mo
locale/es/LC_MESSAGES/: libnoct.mo
locale/fr/LC_MESSAGES/: libnoct.mo
locale/it/LC_MESSAGES/: libnoct.mo
locale/ja/LC_MESSAGES/: libnoct.mo
locale/ru/LC_MESSAGES/: libnoct.mo
locale/zh_CN/LC_MESSAGES/: libnoct.mo
locale/zh_TW/LC_MESSAGES/: libnoct.mo
man/: Makefile.am  noct.1  noct.1.mdoc
po/: Makefile.am  ja.po  messages.pot
resources/i18n/: message.txt
resources/i18n/po_files/: de.po  el.po  en.po  es.po  fr.po  it.po  ja.po  ru.po  tw.po  zh.po
src/: Makefile.am  arena.h  ast.c  ast.h  atomic.h  bytecode.h  c89compat.h  cback.c  cback.h  cli.c  elback.c  elback.h  execution.c  execution.h  gc.c  gc.h  hash.c  hash.h  hir.c  hir.h  i18n.c  interpreter.c  interpreter.h  intrinsics.c  intrinsics.h  jit-arm32.c  jit-arm64.c  jit-common.c  jit-mips32.c  jit-mips64.c  jit-ppc32.c  jit-ppc64.c  jit-riscv32.c  jit-riscv64.c  jit-x86.c  jit-x86_64.c  jit.c  jit.h  lexer.l  lexer.yy.c  (+9 more)
src/api/: api-math.c  api-packed.c  api-system.c
src/backend/: cback.c  elback.c
src/cli/: cli-main.c  cli-repl.c  cli-run.c
src/core/: ast.c  ast.h  cback.c  execution.c  execution.h  gc.c  gc.h  hir.c  hir.h  interpreter.c  intrinsics.c  jit-arm32.c  jit-arm64.c  jit-mips32.c  jit-mips64.c  jit-ppc32.c  jit-ppc64.c  jit-riscv32.c  jit-riscv64.c  jit-x86.c  jit-x86_64.c  lir.c  lir.h  noct.c  runtime.c  runtime.h
tests/: multiarch.noct  run-syntax.sh
tests/syntax/: 05-dictionary.noct  16-unary.noct  17-return.noct  27-plusminusassign.noct  30-hex.noct  30-hex.noct.out  33-abs.noct  34-substring.noct.out
